--- a/Node.Cs/samples/IntranetWebApplicationNode/Views/Home/Index.cshtml
+++ b/Node.Cs/samples/IntranetWebApplicationNode/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+		Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section featured {
     <section class="featured">
